kustomize/workload-infrastructure/network-instance-40-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: network-instance-infrastructuremacvrfitfce40-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: infrastructuremacvrfitfce40
    type: mac-vrf
    admin-state: enable
    description: paco-infrastructuremacvrfitfce40
    interface:
    - name: lag1.40
    - name: lag2.40
    - name: irb0.40
    vxlan-interface:
    - name: vxlan0.40
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
