kustomize/workload-infrastructure/network-instance-40-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: infrastructure-40-network-instance-leaf2
  labels:
    target: leaf2
spec:
  network-instance:
  - name: infrastructure-macvrf-itfce-40
    type: mac-vrf
    admin-state: enable
    description: paco-infrastructure-macvrf-itfce-40
    interface:
    - name: lag1.40
    - name: lag2.40
    - name: irb0.40
    vxlan-interface:
    - name: vxlan0.40
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
