kustomize/workload-infrastructure/network-instance-protocol-bgpevpn40-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: protocolbgpevpn-infrastructuremacvrfitfce40-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: infrastructuremacvrfitfce40
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 40
      vxlan-interface: vxlan0.40
