kustomize/workload-infrastructure/network-instance-protocol-bgpevpn45-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: infrastructure-45-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: infrastructure-ipvrf-itfce-45
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 45
      vxlan-interface: vxlan0.45
