kustomize/workload-infrastructure/network-instance-protocol-bgpvpn40-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: infrastructure-40-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: infrastructuremacvrfitfce40
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:40
        import-rt: target:65002:40
