kustomize/workload-infrastructure/network-instance-protocol-bgpvpn40-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: protocolbgpvpn-infrastructuremacvrfitfce40-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: infrastructuremacvrfitfce40
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:40
        import-rt: target:65002:40
