kustomize/workload-infrastructure/network-instance-protocol-bgpvpn45-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: infrastructure-45-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: infrastructure-ipvrf-itfce-45
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:45
        import-rt: target:65002:45
