kustomize/workload-infrastructure/network-instance-protocol-linux40-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: infrastructure-40-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: infrastructure-macvrf-itfce-40
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
