kustomize/workload-infrastructure/network-instance-protocol-linux45-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: infrastructure-45-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: infrastructure-ipvrf-itfce-45
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
