kustomize/workload-infrastructure/subinterface-e1-50-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: infrastructure-subinterface-e1-50-leaf2
  labels:
    target: leaf2
spec:
  interface-name: ethernet-1/50
  subinterface:
  - index: 45
    type: routed
    admin-state: enable
    description: "paco-e1-50-45-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "45"
