kustomize/workload-infrastructure/subinterface-irb0-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: infrastructure-subinterface-irb0-leaf1
  labels:
    target: leaf1
spec:
  interface-name: irb0
  subinterface:
  - index: 40
    admin-state: enable
    description: "irb0"
    ipv4:
      address:
      - ip-prefix: 100.112.3.254/24
        anycast-gw: true
      arp:
        learn-unsolicited: true
        host-route:
          populate:
          - route-type: dynamic
        evpn:
          advertise: 
          - route-type: dynamic
    anycast-gw:
      virtual-router-id: 10
    ipv6:
      address:
      - ip-prefix: 2010:100:3::fffe/64
        anycast-gw: true
      neighbor-discovery:
        learn-unsolicited: both
        host-route:
          populate:
          - route-type: dynamic
        evpn:
          advertise: 
          - route-type: dynamic
