kustomize/workload-infrastructure/subinterface-lag2-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: infrastructure-subinterface-lag2-leaf1
  labels:
    target: leaf1
spec:
  interface-name: lag2
  subinterface:
  - index: 40
    type: bridged
    admin-state: enable
    description: "paco-esi2-40-leaf1"
    vlan:
      encap:
        single-tagged:
          vlan-id: "40"
