kustomize/workload-infrastructure/vxlaninterface-vxlan0-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaTunnelInterfacesTunnelInterfaceVxlanInterface
metadata:
  name: infrastructure-vxlaninterface-vxlan0-leaf2
  labels:
    target: leaf2
spec:
  tunnel-interface-name: vxlan0
  vxlan-interface:
  - index: 40
    type: bridged
    ingress:
      vni: 40
    egress:
      source-ip: use-system-ipv4-address
  - index: 45
    type: routed
    ingress:
      vni: 45
    egress:
      source-ip: use-system-ipv4-address
